Fix 'about us section' aligning'

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,12 +100,20 @@ footer {
 }
 
 /* About Us */
+
 .about-title {
     text-align: center;
     font-size: 4vmin;
     color: RGB(120, 81, 169);
     text-transform: uppercase;
     margin-top: 30px;
+}
+
+.about-us {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Center the boxes horizontally */
+    margin-top: 50px;
 }
 
 .box {
@@ -116,14 +124,6 @@ footer {
     background-color: #eee;
     box-sizing: border-box;
     overflow: hidden;
-}
-
-.about-us {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-top: 50px;
 }
 
 /* Contact Us */
